# CarANC

./: .gitignore  0.01  0.1  AGENT_FULL_APP_AUDIT_RESULT.md  FULL_APP_FEATURE_AUDIT.md  GROK_RESUME_CONTEXT.md  MULTI_MACHINE_SYNC.md  PRIVACY.md  README.md  ROAD_TEST_PREFLIGHT.md  TERMS.md  build.gradle.kts  c10_cycle10_output.txt  c10c11_sim_output.txt  c11_cycle_output.txt  c11_local_fresh_base.txt  c11_more_cycles.txt  c11_round_consolidated.txt  c11_round_more_cycles.txt  c11_round_report_clean.txt  c12_personal_rough_variants.txt  c12_run_log.txt  c13_log_calib_c11round.txt  c14_nvh_longterm_5drive.txt  c15_full_cycle11_report.txt  c15_master_report.txt  c16_fresh_sim_run.txt  c17_clean.txt  cycle2_p0_3_expand_tests  cycle2_p1_5  cycle2_p1_6  cycle3_extra_more_managers_scoped  cycle3_extra_native_lowfreq_proto  cycle3_p2_ancstatemanager_nonsingleton  cycle3_p2_obd_auto_scan  cycle3_verify_release_build_timing_extra  gradle.properties  settings.gradle.kts  sim_iter.ps1  sim_iter.ps1.bak  (+4 more)
.kotlin/metadata/kotlinTransformedMetadataLibraries/: androidx.annotation-annotation-1.10.0-commonMain-a1LVfQ.klib  androidx.annotation-annotation-1.10.0-nonJvmMain-a1LVfQ.klib
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: automotive_app_desc.xml  file_paths.xml  host_validator.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
log/: CarANC Session Log 2026061801.txt  CarANC Session Log 2026061802.txt  CarANC Session Log 2026061803.txt  CarANC Session Log 2026062201.txt  CarANC Session Log 2026062202.txt  CarANC Session Log 2026062301.txt  CarANC Session Log 2026062302.txt
logcat/: 2026-06-25 064535.884  8792-8792  Z.txt
scripts/: README.md  _analyze_latest_log.py  install-debug.bat  install-debug.ps1  pull-latest-log.bat  pull-latest-log.ps1  start-dhu.bat  start-dhu.ps1
shared/: build.gradle.kts  consumer-rules.pro
shared/src/androidMain/cpp/: CMakeLists.txt  NativeLowBandLms.cpp
(+94 files in other folders)
